<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="si.kisek.pivovarna.pivostevec.activities.AddActivity">

        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_below="@+id/labelSpinner"/>

    <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer"
                android:id="@+id/labelSpinner"
                android:layout_alignParentTop="true"/>

    <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/date"
                  android:id="@+id/labelDate"
                  android:layout_below="@+id/spinner"
                  android:layout_marginTop="20dp"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/date" android:layout_below="@+id/labelDate" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/spinner"
                android:layout_alignEnd="@+id/spinner" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/labelCount05"
              android:id="@+id/labelCount"
              android:layout_below="@+id/date"
              android:layout_marginTop="40dp"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="labelCount03"
              android:id="@+id/labelCount2"
              android:layout_below="@+id/date"
              android:layout_marginTop="40dp"
              android:layout_alignParentRight="true"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelCount"
            android:layout_centerHorizontal="true"
            android:weightSum="2"
            android:orientation="horizontal" android:layout_above="@+id/save">

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:inputType="number"
                  android:ems="10"
                  android:id="@+id/count05"
                  android:hint="@string/count"
                  android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/count"
                android:id="@+id/count03"
                android:layout_weight="1"
                />
    </LinearLayout>
</RelativeLayout>
